# mi-ntk

./: Number_sorting.ipynb  README.md  gemma_3_270m.ipynb  ma.py  metrics.py  modular_arithmetic.ipynb  modular_arithmetic_1L_transformer.ipynb  modular_arithmetic_for_1L_transformer.ipynb  modular_arithmetic_transformer_v4.ipynb  modular_arithmetic_v4.ipynb  ntk.py  pyproject.toml  tms.py  tms_exploration.ipynb  tms_fixed.py
TMS/: tms.py
scratch/: modular_arithmetic.ipynb  modular_arithmetic_1L_transformer.ipynb  tms.py  tms_exploration.ipynb
